--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-streamlit==0.82.0
-typing==3.10.0.2
-matplotlib==3.4.3
-networkx==2.6.3
-openai==0.30.0
-graphviz==0.17
-dataclasses==0.8
-textwrap3==0.9.2
-streamlit-agraph==0.5.0
+streamlit
+streamlit-tags
+openai
+langchain
